--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,191 +1,95 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
-@import url(root.css);
+@import url(./root.css);
 
 * {
-    padding: 0;
     margin: 0;
-    list-style-type: none;
-    text-decoration: none;
+    padding: 0;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 
-/***** flex and center property *****/
+/****** flex & center ******/
 .d-flex {
     display: flex;
-}
-
-.flex-grow {
-    flex-grow: 1;
 }
 
 .align-item {
     align-items: center;
 }
 
-.justify-content {
+.text-center {
+    text-align: center;
+}
+
+/****** padding ******/
+.pt-26 {
+    padding-top: 26px;
+}
+
+.pt-12 {
+    padding-top: 12px;
+}
+
+.pt-31 {
+    padding-top: 31px;
+}
+
+.pt-133 {
+    padding-top: 133px;
+}
+
+.parent {
+    display: flex;
+    gap: 29px;
+    margin-top: 44px;
+}
+
+.grow {
+    display: flex;
     justify-content: center;
-}
-
-.justify-item {
-    justify-items: center;
-}
-
-.justify-content-end {
-    justify-content: end;
-}
-
-.justify-content-between {
-    justify-content: space-between;
-}
-
-.flex-column {
+    flex-grow: 1;
+    align-items: center;
     flex-direction: column;
 }
 
-/***** margin property *****/
-.mb-0 {
-    margin-bottom: 0;
+.logo {
+    padding: 15px 0px 15px 0px;
 }
 
-.mt-199 {
-    margin-top: 199px;
+.header-img-1 {
+    bottom: 0%;
+    position: absolute;
+    left: 5%;
 }
 
-.mt-133 {
-    margin-top: 133px;
-}
-
-.mt-107 {
-    margin-top: 107px;
-}
-
-.mb-223 {
-    margin-bottom: 223px;
-}
-
-.pb-74 {
-    padding-bottom: 74px;
-}
-
-.mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-/****** width and height property ******/
-.w-100 {
-    width: 100%;
-}
-
-.min-h-70 {
-    min-height: 80vh;
-}
-
-.max-w-561 {
-    max-width: 561px;
-}
-
-.min-h-100 {
-    min-height: 100vh;
-}
-
-/****** gap property ******/
-.gap-14 {
-    gap: 14px;
-}
-
-.gap-29 {
-    gap: 29px;
-}
-
-.gap-39 {
-    gap: 39px;
-}
-
-.container {
-    max-width: 1140px;
-    padding-left: 12px;
-    padding-right: 12px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-left: -12px;
-    margin-right: -12px;
-}
-
-.col-6 {
-    width: 50%;
-    padding-left: 12px;
-    padding-right: 12px;
+.navbar-link:hover {
+    color: var(--color-níu-zǎi);
 }
 
 .bg-img {
-    background-image: url(../image/png/header-bg-img.png);
+    background-image: url(/assets/image/png/header-bg-img.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    position: relative;
+}
+
+.bg-img-2 {
+    background-image: url(/assets/image/png/section-2-bg-img.png);
     background-repeat: no-repeat;
     background-size: cover;
+    height: 700px;
+    display: flex;
+    position: relative;
 }
 
-.navbar {
-    font-weight: 400;
-    line-height: 19.28px;
-    text-align: left;
-}
-
-.circle {
-    width: 29px;
-    height: 29px;
-    border-radius: 23px;
-    border: 1px solid #FFFFFF;
-}
-
-.head {
-    font-weight: 600;
-    line-height: 27.36px;
-    text-align: left;
-}
-
-.heading {
-    font-weight: 900;
-    line-height: 109.44px;
-    text-align: left;
-    margin-top: 2px;
-}
-
-.para {
-    font-weight: 600;
-    line-height: 22.8px;
-    text-align: left;
-    margin-top: 12px;
-}
-
-.btn {
-    font-weight: 600;
-    line-height: 22.8px;
-    text-align: left;
-    padding: 16px 32px 16px 32px;
-    gap: 10px;
-    border-radius: 30.5px;
-    border: none;
-    background: linear-gradient(135.55deg, #06AFF2 -2.07%, #056BF1 105.81%);
-    margin-top: 44px;
-    cursor: pointer;
-}
-
-.btn:hover {
-    color: #056BF1;
-    background: white;
-}
-
-.data {
-    font-weight: 600;
-    line-height: 22.8px;
-    text-align: left;
-    margin-top: 44px;
+.container {
+    max-width: 1320px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 12px;
+    padding-right: 12px;
 }
 
 .layer {
@@ -193,50 +97,40 @@
     bottom: 0%;
     width: 100%;
     left: 0%;
+    right: 0%;
 }
 
-/****** section-2 ******/
-
-.bg-img-2 {
-    background-image: url(../image/png/section-2-bg-img.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+.row {
+    flex-wrap: wrap;
+    flex-direction: row;
+    display: flex;
+    margin-left: -12px;
+    margin-right: -12px;
 }
 
-.trailor {
-    font-weight: 600;
-    line-height: 27.36px;
-    text-align: center;
-}
-
-.heading-2 {
-    font-weight: 900;
-    line-height: 109.44px;
-    text-align: center;
-    margin-top: 2px;
-}
-
-.time {
-    font-weight: 600;
-    line-height: 41.04px;
-    text-align: center;
-    margin-top: 199px;
-}
-
-.data-2 {
-    font-weight: 400;
-    line-height: 18.24px;
-    text-align: center;
-    margin-top: 7px;
-    margin-bottom: 0;
-}
-
-.pt-223 {
-    padding-top: 223px;
-}
-
-.cursor {
+.btn-1 {
+    background: linear-gradient(135.55deg, #06AFF2 -2.07%, #056BF1 105.81%);
+    padding: 16px 32px 16px 32px;
+    border-radius: 30.5px;
+    border: none;
     cursor: pointer;
+}
+
+.btn-1:hover {
+    background: linear-gradient(135.55deg, #056BF1 -2.07%, #06AFF2 105.81%);
+}
+
+.btn-2 {
+    background-color: transparent;
+    border: none;
+    padding: 16px 32px 16px 32px;
+    border-radius: 30.5px;
+    transition: all 200ms;
+    cursor: pointer;
+}
+
+.btn-2:hover {
+    background: linear-gradient(135.55deg, #06AFF2 -2.07%, #056BF1 105.81%);
 }
 
 .menu-lines {
@@ -248,15 +142,24 @@
     transition: all 300ms linear;
     transform-origin: left;
     border-radius: 10px;
-    background-color: white;
+    background-color: #fff;
+}
+
+.z-5 {
+    z-index: 5;
+}
+
+.bottom-text {
+    position: absolute;
+    bottom: 10%;
 }
 
 .rotate40 {
-    transform: rotate(42deg);
+    transform: rotate(40deg);
 }
 
 .rotate-45 {
-    transform: rotate(-43deg);
+    transform: rotate(-44deg);
 }
 
 .col-12 {
@@ -265,11 +168,73 @@
     padding-right: 12px;
 }
 
-@media (max-width:991.98px) {
+@media (min-width:991.98px) {
+    .col-lg-6 {
+        width: 50%;
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+}
+
+@media (min-width:1199.98px) {
+    .nav-bar {
+        display: flex;
+        justify-content: space-between;
+        justify-content: center;
+        padding-left: 150px;
+        padding-right: 150px;
+        backdrop-filter: blur(20px);
+    }
+
+    .nav-link {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .gap-39 {
+        gap: 39px;
+    }
+
+    .gap-20 {
+        gap: 20px;
+    }
+
+    .d-lg-none {
+        display: none;
+    }
+}
+
+@media (min-width:1440.99px) {
+    .header-img-1 {
+        position: unset;
+    }
+}
+
+@media (max-width:1439.98px) {
+    .header-img-1 {
+        width: 80%;
+        position: unset;
+        display: flex;
+        margin: auto;
+        padding-top: 133px;
+    }
+}
+
+@media (max-width:1199.98px) {
+    .logo {
+        display: none;
+    }
+
+    .nav-bar {
+        justify-content: space-between;
+        padding: 20px;
+    }
+
     .nav-link {
         display: flex;
         flex-direction: column;
-        background-color: black;
+        background: black;
         width: 100%;
         min-height: 100vh;
         position: fixed;
@@ -278,24 +243,63 @@
         right: -100%;
         top: 0%;
         transition: all 300ms linear;
-        z-index: 5;
+        z-index: 3;
     }
 
-    .d-block {
-        display: block;
+    .bg-transparent {
+        background-color: transparent;
     }
 
-    .d-lg-none {
-        display: none;
-    }
-
-    .show-navbar {
+    .show-nvabar {
         right: 0;
     }
 
-    .col-lg-6 {
-        width: 50%;
-        padding-left: 12px;
-        padding-right: 12px;
+    .gap-20 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+        gap: 9px;
+    }
+
+    .gap-39 {
+        gap: 20px;
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        align-items: center;
+        gap: 10px;
+    }
+}
+
+@media (max-width:991.98px) {
+    .header-img-1 {
+        position: unset;
+        width: 60%;
+        padding-top: 0;
+    }
+
+    .pt-133 {
+        padding-top: 50px;
+    }
+
+    .parent {
+        margin-bottom: 50px;
+    }
+}
+
+@media (max-width:768px) {
+    .header-img-1 {
+        width: 80%;
+        margin: auto;
+        display: flex;
+    }
+}
+
+@media (max-width:425px) {
+    .parent {
+        display: flex;
+        flex-direction: column;
+        padding: 40px;
     }
 }
