--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@
     align-items: center;
 }
 
+.justify-content-space {
+    justify-content: space-between;
+}
+
 .text-center {
     text-align: center;
 }
@@ -37,6 +41,45 @@
 
 .pt-133 {
     padding-top: 133px;
+}
+
+.mt-36 {
+    margin-top: 36px;
+}
+
+/****** width ******/
+.w-100 {
+    width: 100%;
+}
+
+.max-w-163 {
+    max-width: 163px;
+}
+
+.max-w-198 {
+    max-width: 198px;
+}
+
+.max-w-206 {
+    max-width: 206px;
+}
+
+.max-w-425 {
+    max-width: 425px;
+}
+
+.max-w-607 {
+    max-width: 607px;
+}
+
+.max-w-1140 {
+    max-width: 1140px;
+}
+
+.bg-dark-black {
+    width: 100%;
+    left: 0%;
+    position: absolute;
 }
 
 .parent {
@@ -63,8 +106,13 @@
     left: 5%;
 }
 
+.navbar-link {
+    transition: all 300ms linear;
+}
+
 .navbar-link:hover {
     color: var(--color-níu-zǎi);
+    transform: scale(1.3);
 }
 
 .bg-img {
@@ -85,7 +133,8 @@
 }
 
 .container {
-    max-width: 1320px;
+    max-width: 1140px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     padding-left: 12px;
@@ -108,16 +157,27 @@
     margin-right: -12px;
 }
 
+.icon {
+    transition: all 300ms linear;
+}
+
+.icon:hover {
+    transform: scale(1.3);
+}
+
 .btn-1 {
-    background: linear-gradient(135.55deg, #06AFF2 -2.07%, #056BF1 105.81%);
+    border: none;
     padding: 16px 32px 16px 32px;
     border-radius: 30.5px;
-    border: none;
+    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+    background: linear-gradient(135.55deg, #06AFF2 -2.07%, #056BF1 105.81%);
     cursor: pointer;
+    z-index: 1;
 }
 
 .btn-1:hover {
-    background: linear-gradient(135.55deg, #056BF1 -2.07%, #06AFF2 105.81%);
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+    background: transparent;
 }
 
 .btn-2 {
@@ -125,12 +185,14 @@
     border: none;
     padding: 16px 32px 16px 32px;
     border-radius: 30.5px;
-    transition: all 200ms;
     cursor: pointer;
+    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+    z-index: 1;
 }
 
 .btn-2:hover {
-    background: linear-gradient(135.55deg, #06AFF2 -2.07%, #056BF1 105.81%);
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+
 }
 
 .menu-lines {
@@ -168,6 +230,56 @@
     padding-right: 12px;
 }
 
+
+
+/****** display-grid ******/
+
+.d_grid {
+    /* display: -ms-grid; */
+    display: grid;
+    /* -ms-grid-columns: auto; */
+    /* grid-template-columns: auto; */
+    -ms-grid-rows: auto;
+    grid-template-rows: auto;
+    grid-gap: 20px;
+}
+
+.d_grid>*:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+}
+
+.parent-grid .grid-item-1 {
+    grid-column: 1/2;
+    grid-row: 1/4;
+}
+
+.parent-grid .grid-item-2 {
+    grid-column: 2/3;
+    grid-row: 1/3;
+}
+
+.parent-grid .grid-item-3 {
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+
+.parent-grid .grid-item-4 {
+    grid-column: 4/5;
+    grid-row: 1/2;
+}
+
+.parent-grid .grid-item-5 {
+    grid-column: 3/5;
+    grid-row: 2/3;
+}
+
+.parent-grid .grid-item-6 {
+    grid-column: 2/5;
+    grid-row: 3/4;
+}
+
+
 @media (min-width:991.98px) {
     .col-lg-6 {
         width: 50%;
@@ -181,8 +293,6 @@
         display: flex;
         justify-content: space-between;
         justify-content: center;
-        padding-left: 150px;
-        padding-right: 150px;
         backdrop-filter: blur(20px);
     }
 
@@ -205,15 +315,16 @@
     }
 }
 
-@media (min-width:1440.99px) {
+/* @media (min-width:1440.99px) {
     .header-img-1 {
         position: unset;
     }
-}
+} */
 
 @media (max-width:1439.98px) {
     .header-img-1 {
-        width: 80%;
+        width: 100%;
+        left: 50%;
         position: unset;
         display: flex;
         margin: auto;
@@ -228,7 +339,7 @@
 
     .nav-bar {
         justify-content: space-between;
-        padding: 20px;
+        padding: 20px 0px;
     }
 
     .nav-link {
@@ -254,6 +365,10 @@
         right: 0;
     }
 
+    .col-reverse {
+        flex-direction: column-reverse;
+    }
+
     .gap-20 {
         display: flex;
         justify-content: center;
@@ -263,12 +378,11 @@
     }
 
     .gap-39 {
-        gap: 20px;
+        gap: 39px;
         display: flex;
         flex-direction: column;
         margin: auto;
         align-items: center;
-        gap: 10px;
     }
 }
 
@@ -294,6 +408,13 @@
         margin: auto;
         display: flex;
     }
+}
+
+@media (max-width:575.98px) {
+    .d_grid {
+        grid-gap: 10px;
+    }
+
 }
 
 @media (max-width:425px) {
