--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,9 @@
 .mt-36 {
     margin-top: 36px;
 }
+.mt-78 {
+    margin-top: 78px;
+}
 
 /****** width ******/
 .w-100 {
@@ -279,6 +282,30 @@
     grid-row: 3/4;
 }
 
+.parent-grid .grid-item img {
+    object-fit: cover;
+    -o-object-fit: cover;
+
+    object-position: center;
+    -o-object-position: center;
+    -webkit-transition: all 500ms linear;
+    -o-transition: all 500ms linear;
+    transition: all 500ms linear;
+    width: 100%;
+    height: 100%;
+}
+
+.parent-grid .grid-item {
+    overflow: hidden;
+}
+
+.parent-grid .grid-item {
+    cursor: pointer;
+}
+
+.parent-grid .grid-item:hover img {
+    transform: scale(1.1);
+}
 
 @media (min-width:991.98px) {
     .col-lg-6 {
