--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,10 @@
     margin-top: 36px;
 }
 
+.mb-45 {
+    margin-bottom: 45px;
+}
+
 .mt-54 {
     margin-top: 54px;
 }
@@ -63,8 +67,16 @@
     margin-top: 78px;
 }
 
+.mt-82 {
+    margin-top: 82px;
+}
+
 .pb-100 {
     padding-bottom: 100px;
+}
+
+.gap-14 {
+    gap: 14px;
 }
 
 /****** width ******/
