--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,30 +84,6 @@
     width: 100%;
 }
 
-.max-w-163 {
-    max-width: 163px;
-}
-
-.max-w-198 {
-    max-width: 198px;
-}
-
-.max-w-206 {
-    max-width: 206px;
-}
-
-.max-w-425 {
-    max-width: 425px;
-}
-
-.max-w-607 {
-    max-width: 607px;
-}
-
-.max-w-946 {
-    max-width: 946px;
-}
-
 .max-w-1140 {
     max-width: 1140px;
 }
@@ -278,7 +254,7 @@
     display: grid;
     grid-column: auto;
     grid-row: auto;
-    grid-gap: 20px;
+    grid-gap: 16.55px !important;
 }
 
 .parent-grid .grid-item-1 {
