--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,50 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 @import url(./root.css);
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-}
-
-/****** flex & center ******/
-.d-flex {
-    display: flex;
-}
-
-.align-item {
-    align-items: center;
-}
-
-.justify-content-space {
-    justify-content: space-between;
-}
-
-.text-center {
-    text-align: center;
-}
-
 /****** padding ******/
-.pt-26 {
-    padding-top: 26px;
-}
 
 .pt-12 {
     padding-top: 12px;
+}
+
+.pt-17 {
+    padding-top: 17px !important;
+}
+
+.pt-26 {
+    padding-top: 26px;
 }
 
 .pt-31 {
     padding-top: 31px;
 }
 
+.pt-77 {
+    padding-top: 77px;
+}
+
 .pt-133 {
     padding-top: 133px;
 }
 
-.pt-77 {
-    padding-top: 77px;
+.pb-100 {
+    padding-bottom: 100px;
+}
+
+.mb-17 {
+    margin-bottom: 17px;
 }
 
 .mt-36 {
@@ -71,28 +59,22 @@
     margin-top: 82px;
 }
 
-.pb-100 {
-    padding-bottom: 100px;
-}
-
+/****** gap ******/
 .gap-14 {
     gap: 14px;
 }
 
 /****** width ******/
-.w-100 {
-    width: 100%;
-}
 
 .max-w-1140 {
     max-width: 1140px;
 }
 
-.bg-dark-black {
+/* .bg-dark-black {
     width: 100%;
     left: 0%;
     position: absolute;
-}
+} */
 
 .parent {
     display: flex;
@@ -113,9 +95,9 @@
 }
 
 .header-img-1 {
-    bottom: 0%;
+    bottom: -10%;
     position: absolute;
-    left: 5%;
+    left: 0%;
 }
 
 .navbar-link {
@@ -131,8 +113,8 @@
     background-image: url(/assets/image/png/header-bg-img.png);
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: 100vh;
     position: relative;
+    height: 810px;
 }
 
 .bg-img-2 {
@@ -145,18 +127,10 @@
 }
 
 .bg-img-3 {
-    background-image: url(../image/png/accordion-bg-img.png);
+    background-image: url(../image/png/footer-bg-img.png);
     background-size: cover;
     background-repeat: no-repeat;
-}
-
-.container {
-    max-width: 1140px;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 12px;
-    padding-right: 12px;
+    background-position: left !important;
 }
 
 .layer {
@@ -165,14 +139,6 @@
     width: 100%;
     left: 0%;
     right: 0%;
-}
-
-.row {
-    flex-wrap: wrap;
-    flex-direction: row;
-    display: flex;
-    margin-left: -12px;
-    margin-right: -12px;
 }
 
 .icon {
@@ -240,12 +206,6 @@
 
 .rotate-45 {
     transform: rotate(-44deg);
-}
-
-.col-12 {
-    width: 100%;
-    padding-left: 12px;
-    padding-right: 12px;
 }
 
 /****** display-grid ******/
@@ -363,14 +323,25 @@
     border: 1px solid white;
 }
 
+.opacity-70 {
+    opacity: 70%;
+}
 
+.faq-img {
+    width: 100% !important;
+    height: 100%;
+    object-fit: cover;
+    -o-object-fit: cover;
+    object-position: center;
+    -o-object-position: center;
+    background-position: center;
+}
 
-@media (min-width:991.98px) {
-    .col-lg-6 {
-        width: 50%;
-        padding-left: 12px;
-        padding-right: 12px;
-    }
+.circle {
+    width: 54px;
+    height: 54px;
+    border-radius: 50%;
+    border: 1px solid var(--color-white);
 }
 
 @media (min-width:1199.98px) {
@@ -395,9 +366,9 @@
         gap: 20px;
     }
 
-    .d-lg-none {
+    /* .d-lg-none {
         display: none;
-    }
+    } */
 }
 
 @media (max-width:1439.98px) {
@@ -473,11 +444,11 @@
     }
 
     .pt-133 {
-        padding-top: 150px;
+        padding-top: 20px;
     }
 
     .parent {
-        margin-bottom: 50px;
+        /* margin-bottom: 50px; */
     }
 }
 
@@ -486,6 +457,10 @@
         width: 80%;
         margin: auto;
         display: flex;
+    }
+
+    .parent {
+        margin-top: 0px;
     }
 }
 
@@ -500,6 +475,6 @@
     .parent {
         display: flex;
         flex-direction: column;
-        padding: 40px;
+        padding: 4px 60px 0px 60px;
     }
 }
