--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@
 }
 
 .navbar-link:hover {
-    color: var(--color-níu-zǎi);
+    color: var(--color-níu-zǎi) !important;
     transform: scale(1.3);
 }
 
@@ -343,7 +343,7 @@
     transform: scale(1.2);
 }
 
-@media (min-width:1199.98px) {
+@media (min-width:991.98px) {
     .nav-bar {
         display: flex;
         justify-content: space-between;
@@ -377,7 +377,7 @@
     }
 }
 
-@media (max-width:1199.98px) {
+@media (max-width:991.98px) {
     .logo {
         display: none;
     }
@@ -385,6 +385,10 @@
     .nav-bar {
         justify-content: space-between;
         padding: 20px 0px;
+    }
+
+    .min-v-100 {
+        height: 100vh !important;
     }
 
     .nav-link {
@@ -430,22 +434,18 @@
 @media (max-width:991.98px) {
     .header-img-1 {
         position: unset;
-        width: 60%;
+        width: 50%;
         padding-top: 0;
     }
 
     .pt-133 {
         padding-top: 20px;
     }
-
-    .bg-img {
-        height: 100vh;
-    }
 }
 
 @media (max-width:768px) {
     .header-img-1 {
-        width: 80%;
+        width: 70%;
         margin: auto;
         display: flex;
     }
