--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,8 +47,12 @@
     margin-top: 54px;
 }
 
-.mt-63 {
-    margin-top: 63px;
+.pt-63 {
+    padding-top: 63px;
+}
+
+.pb-46 {
+    padding-bottom: 46px;
 }
 
 .mt-78 {
@@ -70,6 +74,10 @@
     max-width: 1140px !important;
 }
 
+.max-w-946 {
+    max-width: 946px !important;
+}
+
 .parent {
     display: flex;
     gap: 29px;
@@ -84,8 +92,8 @@
     flex-direction: column;
 }
 
-.logo {
-    padding: 15px 0px 0px 0px;
+.py-15 {
+    padding: 15px 0px;
 }
 
 .header-img-1 {
@@ -94,13 +102,8 @@
     left: -10%;
 }
 
-.navbar-link {
-    transition: all 300ms linear;
-}
-
 .navbar-link:hover {
     color: var(--color-níu-zǎi) !important;
-    transform: scale(1.3);
 }
 
 .bg-img {
@@ -108,7 +111,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
-    height: 810px;
+    height: 810px !important;
 }
 
 .bg-img-2 {
@@ -136,7 +139,7 @@
 }
 
 .icon {
-    transition: all 300ms linear;
+    transition: all 200ms linear;
 }
 
 .icon:hover {
@@ -179,7 +182,7 @@
     margin-bottom: 5px;
     display: flex;
     z-index: 10;
-    transition: all 300ms linear;
+    transition: all 300ms linear !important;
     transform-origin: left;
     border-radius: 10px;
     background-color: #fff;
@@ -187,6 +190,10 @@
 
 .z-5 {
     z-index: 5;
+}
+
+.cursor {
+    cursor: pointer;
 }
 
 .bottom-text {
@@ -217,7 +224,7 @@
 }
 
 .parent-grid .grid-item-2 {
-    grid-column: 2/3;
+    grid-column: 2/3; 
     grid-row: 1/3;
 }
 
@@ -244,11 +251,9 @@
 .parent-grid .grid-item img {
     object-fit: cover;
     -o-object-fit: cover;
-    object-position: center;
-    -o-object-position: center;
-    -webkit-transition: all 500ms linear;
-    -o-transition: all 500ms linear;
-    transition: all 500ms linear;
+    -webkit-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    transition: all 200ms linear;
     width: 100%;
     height: 100%;
 }
@@ -277,7 +282,7 @@
     padding: 0 !important;
 }
 
-.faq .accordion-button::not(.collapsed) {
+.faq .accordion-button:not(.collapsed) {
     padding-bottom: 25px;
 }
 
@@ -287,7 +292,7 @@
 }
 
 .faq .accordion-body {
-    padding: 17px 0px 20px 0px !important;
+    padding: 0px 0px 20px 0px !important;
 }
 
 .faq .accordion-item {
@@ -336,11 +341,11 @@
     height: 54px;
     border-radius: 50%;
     border: 1px solid var(--color-white);
-    transition: all 500ms linear;
+    transition: all 200ms linear;
 }
 
 .circle:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 @media (min-width:991.98px) {
@@ -373,7 +378,7 @@
         position: unset;
         display: flex;
         margin: auto;
-        padding-top: 133px;
+        padding-top: 133px !important;
     }
 }
 
@@ -382,13 +387,8 @@
         display: none;
     }
 
-    .nav-bar {
-        justify-content: space-between;
-        padding: 20px 0px;
-    }
-
     .min-v-100 {
-        height: 100vh !important;
+        min-height: 100vh !important;
     }
 
     .nav-link {
@@ -402,11 +402,11 @@
         bottom: 0;
         right: -100%;
         top: 0%;
-        transition: all 300ms linear;
+        transition: all 300ms linear !important;
         z-index: 3;
     }
 
-    .show-nvabar {
+    .show-navbar {
         right: 0;
     }
 
@@ -415,19 +415,15 @@
     }
 
     .gap-20 {
-        display: flex;
+        /* display: flex;
         justify-content: center;
         align-items: center;
         margin-top: 20px;
-        gap: 9px;
+        gap: 9px; */
     }
 
     .gap-39 {
         gap: 39px;
-        display: flex;
-        flex-direction: column;
-        margin: auto;
-        align-items: center;
     }
 }
 
@@ -435,7 +431,7 @@
     .header-img-1 {
         position: unset;
         width: 50%;
-        padding-top: 0;
+        padding-top: 0 !important;
     }
 
     .pt-133 {
@@ -459,7 +455,6 @@
     .d_grid {
         grid-gap: 10px;
     }
-
 }
 
 @media (max-width:425px) {
