--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,18 +7,6 @@
     padding-top: 12px;
 }
 
-.pt-17 {
-    padding-top: 17px !important;
-}
-
-.pt-26 {
-    padding-top: 26px;
-}
-
-.pt-31 {
-    padding-top: 31px;
-}
-
 .pt-77 {
     padding-top: 77px;
 }
@@ -29,10 +17,6 @@
 
 .pb-100 {
     padding-bottom: 100px;
-}
-
-.mb-17 {
-    margin-bottom: 17px;
 }
 
 .mt-36 {
@@ -143,7 +127,7 @@
 }
 
 .icon:hover {
-    transform: scale(1.3);
+    transform: scale(1.2);
 }
 
 .btn-1 {
@@ -224,7 +208,7 @@
 }
 
 .parent-grid .grid-item-2 {
-    grid-column: 2/3; 
+    grid-column: 2/3;
     grid-row: 1/3;
 }
 
@@ -365,10 +349,6 @@
     .gap-39 {
         gap: 39px;
     }
-
-    .gap-20 {
-        gap: 20px;
-    }
 }
 
 @media (max-width:1439.98px) {
@@ -414,16 +394,13 @@
         flex-direction: column-reverse;
     }
 
-    .gap-20 {
-        /* display: flex;
-        justify-content: center;
-        align-items: center;
+    .gap-14 {
         margin-top: 20px;
-        gap: 9px; */
     }
 
     .gap-39 {
         gap: 39px;
+        flex-direction: column;
     }
 }
 
@@ -443,7 +420,6 @@
     .header-img-1 {
         width: 70%;
         margin: auto;
-        display: flex;
     }
 
     .parent {
@@ -454,6 +430,10 @@
 @media (max-width:575.98px) {
     .d_grid {
         grid-gap: 10px;
+    }
+
+    .header-img-1 {
+        width: 100%;
     }
 }
 
